# guiasalgo1

Labo02-Vectores/Labo02-Vectores/: ejercicios.cpp  ejercicios.h
clase02-archivos/clase-archivos/: CMakeLists.txt  header.cpp  header.h  main.cpp
clase03-vectores/Labo02-Vectores/: CMakeLists.txt  main.cpp
clase04-latex+git/: CMakeLists.txt  ej22.tex  ej24.tex  main.cpp
clase05-debugging/datos/: losprofetas.txt
clase05-debugging/ejemplo/: CMakeLists.txt  main.cpp
clase05-debugging/taller/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
clase05-debugging/taller/test/: cases.cpp  cases.h
clase06-invariante/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
clase6/: CMakeLists.txt  ejercicios.cpp  main.cpp  matrix_utilities.h
